Modify .env files, now is local for each app. Added dependencies for authentication. Modify auth module to validate .env file. Added port to .env and brings it at main for both apps. Removed ConfigModule at common database.module, because each app will have it's own .env file.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,8 @@ services:
     # Mount . to the container dir /user/src/app except node_modules and dist
     volumes:
       - .:/usr/src/app
+    env_file:
+      - ./apps/reservations/.env
   auth:
     build:
       context: .
@@ -23,5 +25,7 @@ services:
     # Mount . to the container dir /user/src/app except node_modules and dist
     volumes:
       - .:/usr/src/app
+    env_file:
+      - ./apps/auth/.env
   mongo:
     image: mongo
