Added payments app: configured with stripe service, configured as microservice that will be consumed by reservations. Added create_charge pattern message. Injected paymentsService ProxyClient at reservationsService, and modify logic of reservation.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,5 +27,19 @@ services:
       - .:/usr/src/app
     env_file:
       - ./apps/auth/.env
+  payments:
+    build:
+      context: .
+      dockerfile: ./apps/payments/Dockerfile
+      target: development
+    # Command outside of the build
+    command: pnpm run start:dev payments
+    ports:
+      - '3003:3003'
+    # Mount . to the container dir /user/src/app except node_modules and dist
+    volumes:
+      - .:/usr/src/app
+    env_file:
+      - ./apps/payments/.env
   mongo:
     image: mongo
